added electronic menu with panels for categories and articles

--- a/wicketcompact/src/main/resources/de/schulte/wicketcompact/resources/cafeone.css
+++ b/wicketcompact/src/main/resources/de/schulte/wicketcompact/resources/cafeone.css
@@ -1,3 +1,11 @@
 .navbar-brand img {
     height: 80px;
 }
+
+.menu-category-entry .menu-category-name {
+    line-height: 5rem;
+}
+
+.menu-category-entry img {
+    height: 5rem;
+}
